<resources>
    <string name="app_name">MireaProject_lesson3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="web_mirea">Web MIREA</string>
    <string name="buy_a_car">Buy a car</string>
    <string name="global_auto_brands">Global auto brands</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mirea_project">Mirea Project</string>
    <string name="rakhman_kichibekov">Rakhman Kichibekov</string>
    <string name="worker">Worker</string>
    <string name="compas">Compas</string>
    <string name="camera">Camera</string>
    <string name="microphone">Microphone</string>
    <string name="profile">Profile</string>
    <string name="email_and_password">Email and Password</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="signed_out">Signed Out</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate
with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="signed_in">Signed In</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified:
%2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="error_sign_in_failed">Sign in failed, see logs for de-
tails.</string>
    <string name="verify">Verify</string>
    <string name="map">Map</string>
    <string name="weather">Weather</string>
    <string name="profile2">Профиль</string>
    <string name="age">Возраст</string>
    <string name="Name">Имя</string>
    <string name="lastname">Фамилия</string>
    <string name="save">Сохранить</string>
    <string name="load">Загрузить</string>
</resources>