<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.kichibekov.mireaproject_lesson3.ui.home.HomeFragment"
        android:label="@string/web_mirea"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.mirea.kichibekov.mireaproject_lesson3.ui.gallery.GalleryFragment"
        android:label="@string/global_auto_brands"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.mirea.kichibekov.mireaproject_lesson3.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_compas"
        android:name="ru.mirea.kichibekov.mireaproject_lesson3.ui.compas.CompasFragment"
        android:label="Compas"
        tools:layout="@layout/fragment_compas" />

    <fragment
        android:id="@+id/nav_camera"
        android:name="ru.mirea.kichibekov.mireaproject_lesson3.ui.camera.CameraFragment"
        android:label="Camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/nav_micro"
        android:name="ru.mirea.kichibekov.mireaproject_lesson3.ui.microphone.MicrophoneFragment"
        android:label="Microphone"
        tools:layout="@layout/fragment_microphone" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="ru.mirea.kichibekov.mireaproject_lesson3.ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_microphone" />

    <fragment
        android:id="@+id/nav_map"
        android:name="ru.mirea.kichibekov.mireaproject_lesson3.ui.map.MapFragment"
        android:label="Map"
        tools:layout="@layout/fragment_microphone" />

    <fragment
        android:id="@+id/nav_weather"
        android:name="ru.mirea.kichibekov.mireaproject_lesson3.ui.weather.WeatherFragment"
        android:label="Weather"
        tools:layout="@layout/fragment_weather" />
</navigation>