<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="270sp"
            android:src="@drawable/firebase" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="120sp"
            android:text="@string/email_and_password"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewUID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:text="password length at least 6 characters"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170sp"
        android:layout_alignParentBottom="true"
        android:background="@color/gray"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/emailPasswordFields"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25sp"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/passEdit"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25sp"
                android:hint="@string/password" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"
                android:shadowColor="#000"
                app:cardCornerRadius="70dp">

                <Button
                    android:id="@+id/signedInButtons"
                    android:layout_width="130sp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25sp"
                    android:backgroundTint="@color/white"
                    android:hint="@string/sign_in" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"
                android:shadowColor="#000"
                app:cardCornerRadius="70dp">

                <Button
                    android:id="@+id/emailPasswordButtons"
                    android:layout_width="130sp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25sp"
                    android:backgroundTint="@color/white"
                    android:hint="@string/create_account" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="20sp"-->
<!--            android:orientation="horizontal">-->

<!--            <androidx.cardview.widget.CardView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginHorizontal="10sp"-->
<!--                android:shadowColor="#000"-->
<!--                app:cardCornerRadius="70dp">-->

<!--                <Button-->
<!--                    android:id="@+id/verifyEmailButton"-->
<!--                    android:layout_width="130sp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginHorizontal="25sp"-->
<!--                    android:backgroundTint="@color/white"-->
<!--                    android:hint="@string/verify" />-->
<!--            </androidx.cardview.widget.CardView>-->

<!--            <androidx.cardview.widget.CardView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginHorizontal="10sp"-->
<!--                android:shadowColor="#000"-->
<!--                app:cardCornerRadius="70dp">-->

<!--                <Button-->
<!--                    android:id="@+id/signOutButton"-->
<!--                    android:layout_width="130sp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginHorizontal="25sp"-->
<!--                    android:backgroundTint="@color/white"-->
<!--                    android:hint="@string/sign_out" />-->
<!--            </androidx.cardview.widget.CardView>-->
<!--        </LinearLayout>-->
    </LinearLayout>


</RelativeLayout>